--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -4,76 +4,90 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="@dimen/padding">
+    android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/imageView3"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:layout_marginTop="26dp"
-     android:src="@drawable/logo1" />
+        android:layout_height="339dp"
+        android:orientation="vertical"
+        android:padding="@dimen/padding">
 
-    <ImageView
-        android:id="@+id/imageView4"
+        <ImageView
+            android:id="@+id/imageView3"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_marginTop="26dp"
+            android:src="@drawable/logo1" />
+
+        <ImageView
+            android:id="@+id/imageView4"
+            android:layout_width="match_parent"
+            android:layout_height="20dp"
+            android:layout_marginBottom="16dp"
+            android:src="@drawable/logo2" />
+
+
+        <EditText
+            android:id="@+id/editEmail"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:ems="10"
+            android:hint="Email"
+            android:inputType="textEmailAddress"
+            tools:layout_editor_absoluteX="118dp"
+            tools:layout_editor_absoluteY="158dp" />
+
+        <EditText
+            android:id="@+id/editPassword"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:ems="10"
+            android:hint="Password"
+            android:inputType="textPassword"
+            tools:layout_editor_absoluteX="118dp"
+            tools:layout_editor_absoluteY="284dp" />
+
+        <TextView
+            android:id="@+id/forgetPassword"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:autoLink="email"
+            android:gravity="center"
+            android:onClick="onForgetPassword"
+            android:padding="20px"
+            android:text="@string/forget_password"
+            android:textAppearance="?android:attr/textAppearanceSmall" />
+
+        <Button
+            android:id="@+id/Login"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:background="@color/loginButton"
+            android:text="@string/login" />
+    </LinearLayout>
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="20dp"
-        android:layout_marginBottom="16dp"
-       android:src="@drawable/logo2" />
+        android:layout_height="match_parent"
+       android:background="@drawable/logingradient"
 
+        android:orientation="vertical">
 
-    <EditText
-        android:id="@+id/editEmail"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:ems="10"
-        android:hint="Email"
-        android:inputType="textEmailAddress"
-        tools:layout_editor_absoluteX="118dp"
-        tools:layout_editor_absoluteY="158dp" />
+        <TextView
+            android:id="@+id/newUserSignUp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center|center_vertical"
+            android:autoLink="web"
+            android:onClick="newUserSignUp"
 
-    <EditText
-        android:id="@+id/editPassword"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:ems="10"
-        android:hint="Password"
-        android:inputType="textPassword"
-        tools:layout_editor_absoluteX="118dp"
-        tools:layout_editor_absoluteY="284dp" />
+            android:paddingTop="40dp"
+            android:text="@string/sign_up"
+            android:textAppearance="?android:attr/textAppearanceSmall" />
 
-    <TextView
-        android:id="@+id/forgetPassword"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:autoLink="email"
-        android:gravity="center"
-        android:padding="20px"
-        android:text="@string/forget_password"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:onClick="onForgetPassword"/>
-
-    <Button
-        android:id="@+id/Login"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:background="@color/loginButton"
-        android:text="@string/login" />
-
-
-    <TextView
-        android:id="@+id/newUserSignUp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:autoLink="web"
-        android:gravity="center"
-        android:padding="20px"
-        android:text="@string/sign_up"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:onClick="newUserSignUp"/>
+    </LinearLayout>
 </LinearLayout>
