--- a/app/src/main/res/layout/activity_family_members.xml
+++ b/app/src/main/res/layout/activity_family_members.xml
@@ -1,9 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".FamilyMembers">
+    android:layout_height="match_parent">
 
-</android.support.constraint.ConstraintLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <android.support.v7.widget.CardView
+            android:layout_width="164dp"
+            android:layout_height="289dp"
+            android:layout_gravity="center"
+            android:layout_margin="20dp"
+            app:cardBackgroundColor="#11998E"
+            app:cardCornerRadius="20dp"
+
+            app:cardElevation="2dp"
+            app:strokeColor="#11998E"
+            app:strokeWidth="10dp">
+
+        </android.support.v7.widget.CardView>
+
+        <android.support.v7.widget.CardView
+            android:layout_width="164dp"
+            android:layout_height="289dp"
+            android:layout_gravity="center"
+            android:layout_margin="20dp"
+
+            app:cardBackgroundColor="#11998E"
+            app:cardCornerRadius="20dp"
+            app:cardElevation="2dp">
+
+        </android.support.v7.widget.CardView>
+    </LinearLayout>
+</ScrollView>
