--- a/app/src/main/res/layout/activity_family_members.xml
+++ b/app/src/main/res/layout/activity_family_members.xml
@@ -8,7 +8,14 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="vertical">
+
+        <GridLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:columnCount="2">
+
+
 
         <android.support.v7.widget.CardView
             android:layout_width="164dp"
@@ -17,10 +24,12 @@
             android:layout_margin="20dp"
             app:cardBackgroundColor="#11998E"
             app:cardCornerRadius="20dp"
+            android:background="@drawable/gradient"
 
             app:cardElevation="2dp"
             app:strokeColor="#11998E"
-            app:strokeWidth="10dp">
+            app:strokeWidth="10dp"
+            android:layout_column="0">
 
         </android.support.v7.widget.CardView>
 
@@ -32,8 +41,40 @@
 
             app:cardBackgroundColor="#11998E"
             app:cardCornerRadius="20dp"
-            app:cardElevation="2dp">
+            app:cardElevation="2dp"
+            android:layout_column="1">
 
         </android.support.v7.widget.CardView>
+
+
+            <android.support.v7.widget.CardView
+                android:layout_width="164dp"
+                android:layout_height="289dp"
+                android:layout_gravity="center"
+                android:layout_margin="20dp"
+
+                app:cardBackgroundColor="#11998E"
+                app:cardCornerRadius="20dp"
+                app:cardElevation="2dp"
+                android:layout_column="0">
+
+            </android.support.v7.widget.CardView>
+
+
+            <android.support.v7.widget.CardView
+                android:layout_width="164dp"
+                android:layout_height="289dp"
+                android:layout_gravity="center"
+                android:layout_margin="20dp"
+
+                app:cardBackgroundColor="#11998E"
+                app:cardCornerRadius="20dp"
+                app:cardElevation="2dp"
+                android:layout_column="1">
+
+            </android.support.v7.widget.CardView>
+
+        </GridLayout>
+
     </LinearLayout>
 </ScrollView>
