--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -87,7 +87,9 @@
 
             android:paddingTop="40dp"
             android:text="@string/sign_up"
-            android:textAppearance="?android:attr/textAppearanceSmall" />
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:textColor="@color/white_background"
+            android:textStyle="bold" />
 
     </LinearLayout>
 </LinearLayout>
