--- a/app/src/main/res/layout/content_dashboard.xml
+++ b/app/src/main/res/layout/content_dashboard.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginBottom="40dp"
+    android:background="@drawable/gradient"
     >
 
     <LinearLayout
@@ -13,77 +14,181 @@
         android:layout_gravity="center"
         android:orientation="vertical"
         android:layout_marginTop="100dp"
-
-
         >
 
 
+        <android.support.v7.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
 
-            <android.support.v7.widget.CardView
+            android:layout_gravity="center"
+            android:layout_margin="20dp"
+            android:background="@drawable/gradient"
+            app:cardBackgroundColor="#ffffff"
+
+            app:cardCornerRadius="20dp"
+            app:cardElevation="2dp"
+            app:strokeColor="#11998E"
+            app:strokeWidth="10dp">
+
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="100dp"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:orientation="horizontal">
 
-                android:layout_gravity="center"
-                android:layout_margin="20dp"
-                android:background="@drawable/gradient"
-                app:cardBackgroundColor="#11998E"
 
-                app:cardCornerRadius="20dp"
-                app:cardElevation="2dp"
-                app:strokeColor="#11998E"
-                app:strokeWidth="10dp">
+                <ImageView
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:src="@drawable/location" />
 
-            </android.support.v7.widget.CardView>
+                <TextView
+                    android:id="@+id/location"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="20dp"
+                    android:gravity="center_vertical"
+                    android:text="Location Tracking"
+                    android:textColor="@color/colorPrimary"
+                    android:textSize="@dimen/subheading_size" />
 
-            <android.support.v7.widget.CardView
+
+            </LinearLayout>
+
+        </android.support.v7.widget.CardView>
+
+
+        <android.support.v7.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+
+            android:layout_gravity="center"
+            android:layout_margin="20dp"
+            android:background="@drawable/gradient"
+            app:cardBackgroundColor="#ffffff"
+
+            app:cardCornerRadius="20dp"
+            app:cardElevation="2dp"
+            app:strokeColor="#11998E"
+            app:strokeWidth="10dp">
+
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="100dp"
-
-                android:layout_gravity="center"
-                android:layout_margin="20dp"
-                android:background="@drawable/gradient"
-                app:cardBackgroundColor="#11998E"
-
-                app:cardCornerRadius="20dp"
-                app:cardElevation="2dp"
-                app:strokeColor="#11998E"
-                app:strokeWidth="10dp">
-
-            </android.support.v7.widget.CardView>
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:orientation="horizontal">
 
 
-            <android.support.v7.widget.CardView
+                <ImageView
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:src="@drawable/shared" />
+
+                <TextView
+                    android:id="@+id/storage"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="50dp"
+                    android:gravity="center_vertical"
+                    android:text="Shared Space"
+                    android:textColor="@color/colorPrimary"
+                    android:textSize="@dimen/subheading_size" />
+
+
+            </LinearLayout>
+
+        </android.support.v7.widget.CardView>
+
+
+        <android.support.v7.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+
+            android:layout_gravity="center"
+            android:layout_margin="20dp"
+            android:background="@drawable/gradient"
+            app:cardBackgroundColor="#ffffff"
+
+            app:cardCornerRadius="20dp"
+            app:cardElevation="2dp"
+            app:strokeColor="#11998E"
+            app:strokeWidth="10dp">
+
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="100dp"
-
-                android:layout_gravity="center"
-                android:layout_margin="20dp"
-                android:background="@drawable/gradient"
-                app:cardBackgroundColor="#11998E"
-
-                app:cardCornerRadius="20dp"
-                app:cardElevation="2dp"
-                app:strokeColor="#11998E"
-                app:strokeWidth="10dp">
-
-            </android.support.v7.widget.CardView>
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:orientation="horizontal">
 
 
-            <android.support.v7.widget.CardView
+                <ImageView
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:src="@drawable/notification" />
+
+                <TextView
+                    android:id="@+id/task"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="20dp"
+                    android:gravity="center_vertical"
+                    android:text="Tasks Notifications "
+                    android:textColor="@color/colorPrimary"
+                    android:textSize="@dimen/subheading_size" />
+
+
+            </LinearLayout>
+
+        </android.support.v7.widget.CardView>
+
+
+        <android.support.v7.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+
+            android:layout_gravity="center"
+            android:layout_margin="20dp"
+            android:background="@drawable/gradient"
+            app:cardBackgroundColor="#ffffff"
+
+            app:cardCornerRadius="20dp"
+            app:cardElevation="2dp"
+            app:strokeColor="#11998E"
+            app:strokeWidth="10dp">
+
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="100dp"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:orientation="horizontal">
 
-                android:layout_gravity="center"
-                android:layout_margin="20dp"
-                android:background="@drawable/gradient"
-                app:cardBackgroundColor="#11998E"
 
-                app:cardCornerRadius="20dp"
-                app:cardElevation="2dp"
-                app:strokeColor="#11998E"
-                app:strokeWidth="10dp">
+                <ImageView
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:src="@drawable/beacon" />
 
-            </android.support.v7.widget.CardView>
+                <TextView
+                    android:id="@+id/beacon"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="20dp"
+                    android:gravity="center_vertical"
+                    android:text="Beacon Notification"
+                    android:textColor="@color/colorPrimary"
+                    android:textSize="@dimen/subheading_size" />
+
+
+            </LinearLayout>
+
+        </android.support.v7.widget.CardView>
+
+
+
+
+
+
 
 
 
