--- a/app/src/main/res/layout/content_dashboard.xml
+++ b/app/src/main/res/layout/content_dashboard.xml
@@ -12,20 +12,19 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:orientation="vertical"
-        android:layout_marginTop="100dp"
-        >
+        android:layout_marginTop="27dp"
+        android:orientation="vertical">
 
 
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="100dp"
+            android:layout_height="70dp"
 
             android:layout_gravity="center"
             android:layout_margin="20dp"
             android:background="@drawable/gradient"
-            app:cardBackgroundColor="#ffffff"
 
+            app:cardBackgroundColor="#ffffff"
             app:cardCornerRadius="20dp"
             app:cardElevation="2dp"
             app:strokeColor="#11998E"
@@ -61,7 +60,7 @@
 
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="100dp"
+            android:layout_height="70dp"
 
             android:layout_gravity="center"
             android:layout_margin="20dp"
@@ -103,7 +102,7 @@
 
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="100dp"
+            android:layout_height="70dp"
 
             android:layout_gravity="center"
             android:layout_margin="20dp"
@@ -145,7 +144,7 @@
 
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="100dp"
+            android:layout_height="70dp"
 
             android:layout_gravity="center"
             android:layout_margin="20dp"
@@ -183,14 +182,6 @@
             </LinearLayout>
 
         </android.support.v7.widget.CardView>
-
-
-
-
-
-
-
-
 
 
     </LinearLayout>
