--- a/app/src/main/res/layout/activity_who_are_you.xml
+++ b/app/src/main/res/layout/activity_who_are_you.xml
@@ -4,12 +4,12 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/linearLayout1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="@dimen/padding"
-    tools:context=".whoAreYou"
-    >
+    tools:context=".whoAreYou">
 
     <TextView
         android:id="@+id/textView2"
@@ -24,13 +24,14 @@
         android:textStyle="bold" />
 
     <android.support.v7.widget.CardView
+        android:id="@+id/cardView"
         android:layout_width="match_parent"
         android:layout_height="@dimen/card_height_whoAreYou"
         android:layout_marginBottom="@dimen/car_margin_bottom"
+        android:onClick="dashboard"
         app:cardBackgroundColor="#E2DDD8D8"
         app:cardCornerRadius="13dp"
-        app:cardElevation="8dp"
-        android:onClick="dashboard">
+        app:cardElevation="8dp">
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -50,18 +51,16 @@
                 app:civ_border_width="2dp" />
 
             <TextView
+                android:id="@+id/member"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_margin="20dp"
-                android:text="Name"
                 android:textSize="18sp"
                 android:textStyle="bold" />
 
         </LinearLayout>
     </android.support.v7.widget.CardView>
-
-
 
 
 </LinearLayout>
