--- a/app/src/main/res/layout/activity_who_are_you.xml
+++ b/app/src/main/res/layout/activity_who_are_you.xml
@@ -1,66 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/linearLayout1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="@dimen/padding"
-    tools:context=".whoAreYou">
-
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="@dimen/subheading_width"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_weight="0"
-        android:gravity="center"
-        android:paddingBottom="@dimen/padding"
-        android:text="Let us know who you are?"
-        android:textSize="@dimen/subheading_size"
-        android:textStyle="bold" />
-
-    <android.support.v7.widget.CardView
-        android:id="@+id/cardView"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/card_height_whoAreYou"
-        android:layout_marginBottom="@dimen/car_margin_bottom"
-        android:onClick="dashboard"
-        app:cardBackgroundColor="#E2DDD8D8"
-        app:cardCornerRadius="13dp"
-        app:cardElevation="8dp">
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-
-            android:layout_gravity="center_vertical"
-            android:orientation="horizontal">
-
-            <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/profile_image0"
-                android:layout_width="85dp"
-                android:layout_height="85dp"
-                android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp"
-                android:src="@drawable/profile"
-                app:civ_border_color="#45BA9E"
-                app:civ_border_width="2dp" />
-
-            <TextView
-                android:id="@+id/member"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_margin="20dp"
-                android:textSize="18sp"
-                android:textStyle="bold" />
-
-        </LinearLayout>
-    </android.support.v7.widget.CardView>
+    tools:context=".MainActivity"
+    android:orientation="vertical">
 
 
-</LinearLayout>
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler_view"
+        android:layout_width="395dp"
+        android:layout_height="715dp"
+        tools:layout_editor_absoluteX="8dp"
+        tools:layout_editor_absoluteY="8dp" />
+</ScrollView>
