--- a/app/src/main/res/layout/activity_account_details.xml
+++ b/app/src/main/res/layout/activity_account_details.xml
@@ -68,7 +68,7 @@
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/password"
+            android:id="@+id/number"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="TextView" />
