--- a/app/src/main/res/layout/activity_contact_details.xml
+++ b/app/src/main/res/layout/activity_contact_details.xml
@@ -93,7 +93,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:background="@color/loginButton"
+            android:background="@drawable/rounded_button"
             android:text="Call"
             android:textColor="#ffffff" />
     </LinearLayout>
