--- a/app/src/main/res/layout/listview.xml
+++ b/app/src/main/res/layout/listview.xml
@@ -14,20 +14,21 @@
 
     <android.support.v7.widget.CardView
         android:id="@+id/cardView"
+        android:onClick="dashboard"
         android:layout_width="270dp"
         android:layout_height="@dimen/card_height_whoAreYou"
-
-        android:onClick="dashboard"
-        app:cardBackgroundColor="#E2DDD8D8"
+        app:cardBackgroundColor="@color/colorPrimary"
         app:cardCornerRadius="13dp"
        >
 
         <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-
-            android:layout_gravity="center_vertical"
-            android:orientation="horizontal">
+            android:layout_width="268dp"
+            android:layout_height="95dp"
+            android:layout_marginLeft="1dp"
+            android:layout_marginRight="1dp"
+            android:background="@drawable/radius"
+            android:gravity="center_vertical"
+            android:paddingLeft="20dp">
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/profile_image0"
