--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -29,7 +29,7 @@
 
         <EditText
             android:id="@+id/editEmail"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:ems="10"
@@ -40,7 +40,7 @@
 
         <EditText
             android:id="@+id/editPassword"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:ems="10"
@@ -53,7 +53,8 @@
             android:id="@+id/forgetPassword"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
+            android:layout_gravity="center|end"
+            android:layout_marginLeft="35dp"
             android:autoLink="email"
             android:gravity="center"
             android:onClick="onForgetPassword"
@@ -63,11 +64,12 @@
 
         <Button
             android:id="@+id/Login"
-            android:layout_width="200dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:background="@color/loginButton"
-            android:text="@string/login" />
+            android:background="@drawable/rounded_button"
+            android:text="@string/login"
+            android:textColor="#FFFFFF" />
     </LinearLayout>
 
     <LinearLayout
