--- a/app/src/main/res/layout/accounts.xml
+++ b/app/src/main/res/layout/accounts.xml
@@ -12,15 +12,18 @@
         android:id="@+id/cardView"
         android:layout_width="270dp"
         android:layout_height="@dimen/card_height_whoAreYou"
-        app:cardBackgroundColor="#E2DDD8D8"
-        app:cardCornerRadius="13dp"
-        app:cardElevation="8dp">
+        app:cardBackgroundColor="@color/colorPrimary"
+        app:cardCornerRadius="13dp">
 
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal"
+            android:layout_width="268dp"
+            android:layout_height="95dp"
+            android:layout_marginLeft="1dp"
+            android:layout_marginRight="1dp"
+            android:background="@drawable/radius"
+            android:gravity="center_vertical"
+            android:orientation="vertical"
             android:paddingLeft="20dp">
 
             <TextView
