--- a/app/src/main/res/layout/activity_shared_space.xml
+++ b/app/src/main/res/layout/activity_shared_space.xml
@@ -6,7 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="@dimen/padding"
+    android:paddingTop="@dimen/padding"
+
     tools:context=".SharedSpace">
 
     <TextView
@@ -29,26 +30,37 @@
 
     <android.support.v7.widget.CardView
         android:id="@+id/cardView1"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/card_height_whoAreYou"
-        android:layout_marginBottom="@dimen/car_margin_bottom"
-        android:onClick="sharedAccounts"
-        app:cardBackgroundColor="#E2DDD8D8"
-        app:cardCornerRadius="13dp"
-        app:cardElevation="8dp">
 
-        <ImageView
-            android:id="@+id/imageView6"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_gravity="center_vertical"
-            android:layout_marginLeft="30dp"
-            app:srcCompat="@drawable/account_icon" />
+        android:onClick="sharedAccounts"
+        android:layout_width="270dp"
+        android:layout_height="@dimen/card_height_whoAreYou"
+        android:layout_marginLeft="25dp"
+        android:layout_marginBottom="25dp"
+
+
+        app:cardBackgroundColor="@color/colorPrimary"
+        app:cardCornerRadius="13dp"
+
+       >
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center">
+            android:layout_width="268dp"
+            android:layout_height="95dp"
+            android:layout_marginLeft="1dp"
+            android:layout_marginRight="1dp"
+            android:background="@drawable/radius"
+            android:gravity="center_vertical"
+            android:paddingLeft="20dp">
+
+            <ImageView
+                android:id="@+id/imageView6"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_gravity="center_vertical"
+                android:layout_marginLeft="30dp"
+                android:layout_marginRight="30dp"
+
+                app:srcCompat="@drawable/account_icon" />
 
             <TextView
                 android:id="@+id/textView3"
@@ -63,26 +75,35 @@
 
     <android.support.v7.widget.CardView
         android:id="@+id/cardView2"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/card_height_whoAreYou"
-        android:layout_marginBottom="@dimen/car_margin_bottom"
-        android:onClick="sharedContacts"
-        app:cardBackgroundColor="#E2DDD8D8"
-        app:cardCornerRadius="13dp"
-        app:cardElevation="8dp">
+        android:layout_marginLeft="25dp"
 
-        <ImageView
-            android:id="@+id/imageView7"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_gravity="center_vertical"
-            android:layout_marginLeft="30dp"
-            app:srcCompat="@drawable/phone_icon" />
+        android:layout_marginBottom="25dp"
+
+        android:onClick="sharedContacts"
+        android:layout_width="270dp"
+        android:layout_height="@dimen/card_height_whoAreYou"
+        app:cardBackgroundColor="@color/colorPrimary"
+        app:cardCornerRadius="13dp"
+        >
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center">
+            android:layout_width="268dp"
+            android:layout_height="95dp"
+            android:layout_marginLeft="1dp"
+            android:layout_marginRight="1dp"
+            android:background="@drawable/radius"
+            android:gravity="center_vertical"
+            android:paddingLeft="20dp">
+
+            <ImageView
+                android:id="@+id/imageView7"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_gravity="center_vertical"
+                android:layout_marginLeft="30dp"
+                app:srcCompat="@drawable/phone_icon"
+                android:layout_marginRight="30dp"
+                />
 
             <TextView
                 android:id="@+id/textView4"
