--- a/app/src/main/res/layout/accounts.xml
+++ b/app/src/main/res/layout/accounts.xml
@@ -13,7 +13,9 @@
         android:layout_width="270dp"
         android:layout_height="@dimen/card_height_whoAreYou"
         app:cardBackgroundColor="@color/colorPrimary"
-        app:cardCornerRadius="13dp">
+        app:cardCornerRadius="13dp"
+        android:layout_marginLeft="10dp"
+        >
 
 
         <LinearLayout
