--- a/app/src/main/res/layout/content_dashboard.xml
+++ b/app/src/main/res/layout/content_dashboard.xml
@@ -108,8 +108,9 @@
             android:layout_gravity="center"
             android:layout_margin="20dp"
             android:background="@drawable/gradient"
-            app:cardBackgroundColor="#ffffff"
+            android:onClick="taskNotifications"
 
+            app:cardBackgroundColor="#ffffff"
             app:cardCornerRadius="20dp"
             app:cardElevation="2dp"
             app:strokeColor="#11998E"
