--- a/app/src/main/res/layout/activity_contacts.xml
+++ b/app/src/main/res/layout/activity_contacts.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="@dimen/padding">
+    android:padding="10dp">
     <android.support.v7.widget.CardView
         android:id="@+id/cardView16"
         android:layout_width="270dp"
