--- a/app/src/main/res/layout/listview.xml
+++ b/app/src/main/res/layout/listview.xml
@@ -8,7 +8,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="@dimen/padding"
+    android:padding="10dp"
     tools:context=".whoAreYou">
 
 
@@ -19,6 +19,7 @@
         android:layout_height="@dimen/card_height_whoAreYou"
         app:cardBackgroundColor="@color/colorPrimary"
         app:cardCornerRadius="13dp"
+        android:layout_marginLeft="10dp"
        >
 
         <LinearLayout
