--- a/app/src/main/res/layout/activity_contacts.xml
+++ b/app/src/main/res/layout/activity_contacts.xml
@@ -13,6 +13,7 @@
         android:layout_height="@dimen/card_height_whoAreYou"
         app:cardBackgroundColor="@color/colorPrimary"
         app:cardCornerRadius="13dp"
+        android:layout_marginLeft="12dp"
         >
 
 
